# murmurative-attention

./: .dockerignore  .gitignore  Dockerfile  README.md  build.toml  pyproject.toml  setup.py
.github/workflows/: test.yml
benchmarks/: e2e_benchmark.py
docs/: murmurative-attention-kernel-plan.md  training-efficiency-plan.md
scripts/: profile_pipeline.py  run_bench.sh  test_correctness.py  test_fix.sh  train_probe.py
src/murmurative/: __init__.py  _cuda_kernels.py  ops.py  reference.py
src/murmurative/csrc/cuda/: slot_diffusion.cu  slot_select_attend.cu  slot_update.cu  slot_update_diffuse.cu
tests/: conftest.py  test_attend.py  test_causal.py  test_diffusion.py  test_gradcheck.py  test_gradcheck_cuda.py  test_multiround.py  test_optimized_pipeline.py  test_select.py  test_select_attend_cuda.py  test_training_loop.py  test_update.py  test_update_diffuse_cuda.py  test_wmma_select_attend.py
torch-ext/: cuda_ops.h  torch_binding.cpp  torch_binding.h  wrappers.cpp
