[project]
name = "murmurative-kernels"
version = "0.1.0"
description = "Slot-based murmurative attention CUDA kernels"
license = { text = "Elastic-2.0" }
requires-python = ">=3.10"

dependencies = [
    "torch>=2.5",
    "kernels>=0.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "numpy",
]
bench = [
    "flash-attn",
    "tiktoken",
    "datasets>=2.14",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]